# mediabox

./: .eslintrc  .prettierignore  bun.lockb  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  constants.ts  download-executables.ts  logging.ts  main.ts  router.ts  styles.scss  util.ts  ytdlp.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
src/binaries/: ffmpeg.ts  util.ts
src/binary-dl/: ffmpeg.ts  util.ts  yt-dlp.ts
src/binary-exec/: yt-dlp.ts
src/components/: Greet.vue
src/routes/: Home.vue  HomeView.vue  LogView.vue  TransformView.vue  YTDLP.vue  YTDLPView.vue
src/types/: yt-dlp.d.ts
